--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ black==24.8.0
 celery==5.4.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
-click==8.2.0
+click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
@@ -15,6 +15,8 @@ Django==5.1
 django-ckeditor-5==0.2.18
 django-cors-headers==4.4.0
 django-extensions==3.2.3
+django-js-asset==3.1.2
+django-mptt==0.17.0
 django-redis==5.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
@@ -43,8 +45,8 @@ PyYAML==6.0.2
 redis==5.0.8
 referencing==0.35.1
 requests==2.32.3
-rpds-py==0.20.0
-six==1.16.0
+rpds-py==0.25.1
+six==1.17.0
 sqlparse==0.5.1
 stripe==4.1.0
 tomli==2.2.1
