--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,15 @@
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/icon": "^1.13.0",
     "@nuxt/image": "^1.10.0",
+    "@pinia/nuxt": "^0.11.0",
+    "@vueuse/core": "^13.3.0",
     "eslint": "^9.28.0",
     "nuxt": "^3.17.4",
+    "nuxt-swiper": "^2.0.1",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "sass": "^1.89.1"
   }
 }
