--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/icon": "^1.13.0",
     "@nuxt/image": "^1.10.0",
+    "@nuxtjs/robots": "^5.2.10",
     "@pinia/nuxt": "^0.11.0",
     "@vueuse/core": "^13.3.0",
     "eslint": "^9.28.0",
