--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "nuxt": "^3.17.4",
     "nuxt-swiper": "^2.0.1",
     "vue": "^3.5.16",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-yandex-maps": "^2.1.9"
   },
   "devDependencies": {
     "sass": "^1.89.1"
