--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt-alt/auth": "^3.1.7",
+    "@nuxt-alt/http": "^1.7.10",
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/icon": "^1.13.0",
     "@nuxt/image": "^1.10.0",
