--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,14 +19,16 @@
     "@pinia/nuxt": "^0.11.0",
     "@vueuse/core": "^13.3.0",
     "eslint": "^9.28.0",
+    "maska": "^3.0.0",
     "nuxt": "^3.17.4",
     "nuxt-swiper": "^2.0.1",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1",
-    "vue-yandex-maps": "^2.1.9",
-    "maska": "^3.0.0"
+    "vue-yandex-maps": "^2.1.9"
   },
   "devDependencies": {
-    "sass": "^1.89.1"
+    "@iconify-json/heroicons": "^1.2.2",
+    "sass": "^1.89.1",
+    "unplugin-icons": "^22.1.0"
   }
 }
