--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+django-import-export==4.3.13
 Django==5.1
 django-ckeditor-5==0.2.18
 django-cors-headers==4.4.0
