--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,9 @@
     "@vueuse/core": "^13.3.0",
     "eslint": "^9.28.0",
     "maska": "^3.0.0",
-    "medium-zoom": "^1.1.0",
     "nuxt": "^3.17.4",
     "nuxt-swiper": "^2.0.1",
+    "v-image-magnifier": "^1.2.0",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1",
     "vue-yandex-maps": "^2.1.9"
